Kafka configuration added for import data from sql

--- a/data-service/src/main/resources/application.yaml
+++ b/data-service/src/main/resources/application.yaml
@@ -6,3 +6,12 @@ spring:
     mongodb:
       uri: ${MONGO_DB_URI}
       database: ${MONGO_DATA_SERVICE_BACKUP_DBNAME}
+  kafka:
+    listener:
+      missing-topics-fatal: false
+    consumer:
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
