--- a/data-service/Dockerfile
+++ b/data-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM caglayn/debianjdk18
 RUN mkdir /home/javaapp
 WORKDIR /home/javaapp
-COPY target/*.jar dataserviceapp.jar
+COPY target/*.jar /home/javaapp/dataserviceapp.jar
 EXPOSE 8091
 ENTRYPOINT ["/opt/jdk-18/bin/java","-jar","/dataserviceapp.jar"]
 
