--- a/data-transform-service/Dockerfile
+++ b/data-transform-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM caglayn/debianjdk18
 RUN mkdir /home/javaapp
 WORKDIR /home/javaapp
-COPY target/*.jar datatransformserviceapp.jar
+COPY target/*.jar /home/javaapp/datatransformserviceapp.jar
 EXPOSE 8092
 ENTRYPOINT ["/opt/jdk-18/bin/java","-jar","/datatransformserviceapp.jar"]
 
